# node-winapi-bindings

./: .gitignore  CMakeLists.txt  README.md  autogypi.json  binding.gyp  index.d.ts  index.js  package.json
src/: UnicodeString.cpp  UnicodeString.h  convenience.cpp  convenience.h  fs.cpp  fs.h  ini.cpp  ini.h  kernel32.cpp  kernel32.h  permissions.cpp  permissions.h  processes.cpp  processes.h  registry.cpp  registry.h  scopeguard.hpp  shell.cpp  shell.h  string_cast.cpp  string_cast.h  system.cpp  system.h  tasks.cpp  tasks.h  util.cpp  util.h  walk.cpp  walk.h  winapi.cpp
